# aime

./: .gitignore  AIME_for_ImageData.ipynb  BayseianAIME.ipynb  COMMERCIAL-LICENSING.md  HowToUseAIME-TitanicData.ipynb  HuberAIME.ipynb  LICENSE  LICENSE.txt  MANIFEST.in  OriginalAIME.ipynb  PCAIME.ipynb  README.md  manifest.json  pyproject.toml  setup.py
aime_xai/: __init__.py  core.py  metrics.py  operator_viz.py  style.py
aime_xai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: why_aime.md
examples/: AIME_for_ImageData.ipynb  HuberAIME-TitanicData.ipynb
examples/colab/: 01_titanic_quickstart.ipynb  02_aime_vs_shap_lime.ipynb  03_bayesian_aime_uncertainty.ipynb
